--- a/src/main/resources/templates/healthInsuranceEdit.html
+++ b/src/main/resources/templates/healthInsuranceEdit.html
@@ -1,191 +1,256 @@
-<!doctype html>
-<html lang="en" xmlns:th"http://www.thymeLeaf.org">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Health Insurance Form</title>
-	
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">	
+	<!-- Bootsrapt -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+	<!-- İcon -->
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<!-- CSS -->
+	<link rel="stylesheet" th:href="@{/css/register.css}" href="src/main/resources/static/css/register.css">
+	<!-- Angularjs -->
+	<script src="js/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	
-	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
-
-	<style>
-		.health-details {
-			width: 100%;
-			padding-left: 4px;
-			justify-content: space-between;
-			display: flex;
-			margin-top: 10px;
-		}
-
-		.health-details .details-questions {
-			display: flex;
-			align-items: center;
-			background-color: #efefef;
-			padding: 8px;
-			border-radius: 12px;
-			box-shadow: 0 5px 10px 0 rgb(0, 0, 0, 0.25);
-		}
-
-		.radio-buttons {
-			display: flex;
-			align-items: center;
-		}
-
-		.radio-buttons label {
-			display: flex;
-			margin-right: 20px;
-		}
-
-		.radio-buttons label input {
-			margin-right: 3px;
-		}
-
-		button {
-			margin-top: 20px;
-		}
-	</style>
 
 </head>
 
-<body ng-app="myApp">
-
+<body ng-app="myApp" ng-controller="healthInsuranceFormController">
 	<!--Navbar-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid px-5">
-          <a class="navbar-brand" href="#">Logo</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-            <ul class="navbar-nav mb-2 mb-lg-0 text-center">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index">
-                    <i class='bx bxs-home'></i>
-                    Home
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/index">Products</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/#">Contact Us</a>
-              </li>
-            </ul>
-          </div>
-          <div class="operations">
-            <a href="/login">
-                <i class='bx bxs-user-circle login-icon'></i>
-                Login
-            </a>
-            <a href="/customerRegister">
-                <i class='bx bxs-user-plus register-icon'></i>
-                Register
-            </a>
-          </div>
-        </div>
-      </nav>
+		<div class="container-fluid px-5">
+			<a class="navbar-brand" href="#">Logo</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+				<ul class="navbar-nav mb-2 mb-lg-0 text-center">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="#">
+							<i class='bx bxs-home'></i>
+							Home
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Products</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Features</a>
+					</li>
+				</ul>
+			</div>
+			<div class="operations">
+				<a href="">
+					<i class='bx bxs-user-circle login-icon'></i>
+					Login
+				</a>
+				<a href="">
+					<i class='bx bxs-user-plus register-icon'></i>
+					Register
+				</a>
+			</div>
+		</div>
+	</nav>
 	<!--	End Navbar-->
 
 
-	<section id="featured" class="my-5 pt-5">
-		<div class="container-register mt-5 py-5" ng-controller="healthInsuranceFormController">
-			<div class="textIntro">
-				<h1 class="text-center">Health Insurance Form</h1>
-<!--				<div class="alert alert-warning" role="alert" th:if="${showHealthAlert}">The person with this health-->
-<!--					information already has health insurance! </div>-->
+	<div class="page-wrapper bg-gra-02">
+		<div class="wrapper">
+			<div class="card">
+				<div class="card-body">
+					<h2 class="title">Health Insurance Form</h2>
+					<form th:action="@{/editHealthInfo}" th:object="${health}" method="post" name="myForm">
+						<input type="hidden" name="customerId" th:value="${health.customerId}" />
+						<input type="hidden" name="healthId" th:value="${health.healthId}" />
+						<p th:value="${health.job}" />
+						<!-- Period - Job -->
+						<div class="row">
+							<div class="col-2">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">Select Insurance Period (Day)</div>
+										<div class="warning"
+											ng-show="myForm.period.$error.required && myForm.period.$touched">
+											<i class='bx bxs-error-alt'></i>
+											<p>Required</p>
+										</div>
+									</label>
+									<select class="form-select" name="period" id="period" th:value="${health.period}"
+										ng-required="true">
+										<option th:selected="${health.period}" ng-repeat="option in periods"
+											ng-value="{{option}}">{{option}}</option>
+									</select>
+								</div>
+							</div>
+							<div class="col-2">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">Select Your Job</div>
+										<div class="warning"
+											ng-show="myForm.job.$error.required && myForm.job.$touched">
+											<i class='bx bxs-error-alt'></i>
+											<p>Required</p>
+										</div>
+									</label>
+									<select class="form-select" name="job" id="job" th:value="${health.job}"
+										ng-required="true">
+										<option th:selected="${health.job}" ng-repeat="option in jobs"
+											value="{{option}}">{{option}}</option>
+									</select>
+								</div>
+							</div>
+						</div>
+						<!-- For Who -->
+						<div class="row">
+							<div class="col-12">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">Select For Who</div>
+										<div class="warning"
+											ng-show="myForm.forWho.$error.required && myForm.forWho.$touched">
+											<i class='bx bxs-error-alt'></i>
+											<p>Required</p>
+										</div>
+									</label>
+									<select class="form-select" name="forWho" ng-model="forWho" ng-required="true"
+										aria-label="Default select example">
+										<option th:selected="${health.forWho}" ng-repeat="option in forWhose"
+											th:value="${option}" disabled>{{option}}</option>
+									</select>
+								</div>
+							</div>
+						</div>
+						<!-- Height - Weight -->
+						<div class="row">
+							<div class="col-2">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">Height (cm)</div>
+										<div class="warning" ng-show="myForm.height.$invalid && myForm.height.$touched">
+											<i class='bx bxs-error-alt'></i>
+											<p>Required</p>
+										</div>
+									</label>
+									<input type="number" name="height" th:value="${health.height}" class="input-4"
+										placeholder="Height (cm)*" ng-required="true" ng-pattern="/^\d{3}$/"
+										onKeyPress="if(this.value.length>2) return false;">
+								</div>
+							</div>
+							<div class="col-2">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">Weight (m)</div>
+										<div class="warning" ng-show="myForm.weight.$invalid && myForm.weight.$touched">
+											<i class='bx bxs-error-alt'></i>
+											<p>Required</p>
+										</div>
+									</label>
+									<input type="number" id="weight" name="weight" th:value="${health.weight}"
+										class="input-4" placeholder="Weight (m)*" ng-required="true"
+										onKeyPress="if(this.value.length>3) return false;">
+								</div>
+							</div>
+						</div>
+						<!-- smoking - SGK -->
+						<div class="row">
+							<div class="col-2">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">Do you have habits such as alcohol or smoking?</div>
+										<div class="warning"
+											ng-show="myForm.smokingOrAlcohol.$error.required && myForm.smokingOrAlcohol.$touched">
+											<i class='bx bxs-error-alt'></i>
+											<p>Required</p>
+										</div>
+									</label>
+									<div class="radio-buttons">
+										<label>
+											<input type="radio" name="smokingOrAlcohol"
+												th:checked="${health.smokingOrAlcohol == 1}" ng-required="true"
+												value="1"> Yes
+										</label>
+										<label>
+											<input type="radio" name="smokingOrAlcohol"
+												th:checked="${health.smokingOrAlcohol == 0}" ng-required="true"
+												value="0"> No
+										</label>
+									</div>
+								</div>
+							</div>
+							<div class="col-2">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">Do you have SGK?</div>
+										<div class="warning"
+											ng-show="myForm.sgk.$error.required && myForm.sgk.$touched">
+											<i class='bx bxs-error-alt'></i>
+											<p>Required</p>
+										</div>
+									</label>
+									<div class="radio-buttons">
+										<label>
+											<input type="radio" name="sgk" th:checked="${health.sgk == 1}"
+												ng-required="true" value="1"> Yes, I
+											have SGK
+										</label>
+										<label>
+											<input type="radio" name="sgk" th:checked="${health.sgk == 0}"
+												ng-required="true" value="0"> No, I
+											don't have SGK
+										</label>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- surgical -->
+						<div class="row">
+							<div class="col-12">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">Have you ever had a surgical operation?</div>
+										<div class="warning"
+											ng-show="myForm.pastOperation.$error.required && myForm.pastOperation.$touched">
+											<i class='bx bxs-error-alt'></i>
+											<p>Required</p>
+										</div>
+									</label>
+									<div class="radio-buttons">
+										<label>
+											<input type="radio" name="pastOperation"
+												th:checked="${health.pastOperation == 1}" ng-required="true" value="1">
+											Yes
+										</label>
+										<label>
+											<input type="radio" name="pastOperation"
+												th:checked="${health.pastOperation == 0}" ng-required="true" value="0">
+											No
+										</label>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- Submit -->
+						<div class="button">
+							<button class="btn btn-submit">Prepare My Offer</button>
+						</div>
+						<!-- alert -->
+						<div ng-show="msg" class="alert alert-warning" role="alert">
+							{{msg}}
+						</div>
+					</form>
+				</div>
 			</div>
-
-			<form th:action="@{/editHealthInfo}" th:object="${health}" method="post" name="myForm"
-				ng-submit="register()">
-				<input type="hidden" name="customerId" th:value="${health.customerId}"/>
-				<input type="hidden" name="healthId" th:value="${health.healthId}" />
-				<div style=" display: flex; flex-direction: row;">
-					<h4 class="mr-2">Customer Id : </h4>
-					<h4 th:text="${health.customerId}">idParam</h4>
-				</div>
-
-				<select name="period" id="period" th:value="${health.period}" ng-required="true">
-					<option th:selected="${health.period}" ng-repeat="option in periods" ng-value="{{option}}">{{option}}</option>
-				</select>
-
-				<select name="job" id="job" th:value="${health.job}" ng-required="true">
-					<option th:selected="${health.job}" ng-repeat="option in jobs" value="{{option}}">{{option}}</option>
-				</select>
-				<p class="error" ng-show="myForm.job.$invalid && myForm.job.$touched">Select your job.</p>
-
-				<select name="forWho" id="forWho">
-					<option th:selected="${health.forWho}" ng-repeat="option in forWhose" th:value="${option}" disabled>{{option}}</option>
-				</select>
-
-				<input type="text" name="height" th:value="${health.height}" placeholder="Height (cm)*" 
-					ng-required="true">
-				<p class="error" ng-show="myForm.height.$invalid && myForm.height.$touched">Fill out your height.</p>
-
-				<input type="text" id="weight" name="weight" th:value="${health.weight}" placeholder="Weight (m)*"
-					ng-required="true">
-				<p class="error" ng-show="myForm.weight.$invalid && myForm.weight.$touched">Fill out your weight.</p>
-
-				<div class="health-details">
-					<div class="details-questions">
-						<label>Do you have habits such as alcohol or smoking?</label>
-					</div>
-					<div class="radio-buttons">
-						<label>
-							<input type="radio" name="smokingOrAlcohol" th:checked="${health.smokingOrAlcohol == 1}"
-								ng-required="true" value="1"> Yes
-						</label>
-						<label>
-							<input type="radio" name="smokingOrAlcohol" th:checked="${health.smokingOrAlcohol == 0}"
-								ng-required="true" value="0"> No
-						</label>
-					</div>
-				</div>
-
-				<div class="health-details">
-					<div class="details-questions">
-						<label>Do you have SGK?</label>
-					</div>
-					<div class="radio-buttons">
-						<label>
-							<input type="radio" name="sgk" th:checked="${health.sgk == 1}" ng-required="true" value="1"> Yes, I
-							have SGK
-						</label>
-						<label>
-							<input type="radio" name="sgk" th:checked="${health.sgk == 0}" ng-required="true" value="0"> No, I
-							don't have SGK
-						</label>
-					</div>
-				</div>
-
-				<div class="health-details">
-					<div class="details-questions">
-						<label>Have you ever had a surgical operation?</label>
-					</div>
-					<div class="radio-buttons">
-						<label>
-							<input type="radio" name="pastOperation" th:checked="${health.pastOperation == 1}" ng-required="true"
-								value="1"> Yes
-						</label>
-						<label>
-							<input type="radio" name="pastOperation" th:checked="${health.pastOperation == 0}" ng-required="true"
-								value="0"> No
-						</label>
-					</div>
-				</div>
-
-				<button type="submit" class="btn" ng-disabled="myForm.$invalid">Prepare My Offer</button>
-
-			</form>
 		</div>
-	</section>
-	
-	<!-- Footer -->
-	<footer class="mt-4 py-4">
+	</div>
+
+	<footer class="py-4">
 		<div class="row container mx-auto pt-4">
 			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
 				<img src="img/logo.png" alt="">
@@ -209,7 +274,7 @@
 				</div>
 				<div>
 					<h6 class="text-uppercase">Github</h6>
-					<p>https://github.com/edamuutlu</p>  
+					<p>https://github.com/edamuutlu</p>
 					<p>https://github.com/nuricanbrdmr</p>
 				</div>
 				<div>
@@ -231,24 +296,13 @@
 			</div>
 			<div class="copyright mt-2">
 				<div class="row container mx-auto">
-					<div class="col-lg-4 col-md-6 col-12 text-nowrap mb-2">
+					<div class="col-lg-4 col-md-6 col-12 mb-2">
 						<p>Eda Nur Mutlu eInsurance © 2023. All Rights Reserved</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</footer>
-
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-		integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
-		integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
-		crossorigin="anonymous"></script>
-
 	<script src="/js/app.js"></script>
 </body>
 
