--- a/src/main/resources/templates/healthInsuranceForm.html
+++ b/src/main/resources/templates/healthInsuranceForm.html
@@ -1,60 +1,27 @@
-<!doctype html>
-<html lang="en" xmlns:th"http://www.thymeLeaf.org">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Health Insurance Form</title>
-	
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Health Insurance Form</title>
+    <!-- Bootsrapt -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+	<!-- İcon -->
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+	<!-- CSS -->
+	<link rel="stylesheet" th:href="@{/css/register.css}" href="src/main/resources/static/css/register.css">
+	<!-- Angularjs -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	
-	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
-
-	<style>
-		.health-details {
-			width: 100%;
-			padding-left: 4px;
-			justify-content: space-between;
-			display: flex;
-			margin-top: 10px;
-		}
-
-		.health-details .details-questions {
-			display: flex;
-			align-items: center;
-			background-color: #efefef;
-			padding: 8px;
-			border-radius: 12px;
-			box-shadow: 0 5px 10px 0 rgb(0, 0, 0, 0.25);
-		}
-
-		.radio-buttons {
-			display: flex;
-			align-items: center;
-		}
-
-		.radio-buttons label {
-			display: flex;
-			margin-right: 20px;
-		}
-
-		.radio-buttons label input {
-			margin-right: 3px;
-		}
-
-		button {
-			margin-top: 20px;
-		}
-	</style>
-
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body ng-app="myApp">
-
-	<!--Navbar-->
+<body ng-app="myApp" ng-controller="healthInsuranceFormController">
+        <!--Navbar-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid px-5">
           <a class="navbar-brand" href="#">Logo</a>
@@ -64,16 +31,16 @@
           <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0 text-center">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index">
+                <a class="nav-link active" aria-current="page" href="#">
                     <i class='bx bxs-home'></i>
                     Home
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/index">Products</a>
+                <a class="nav-link" href="#">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/#">Contact Us</a>
+                <a class="nav-link" href="#">Features</a>
               </li>
             </ul>
           </div>
@@ -92,102 +59,172 @@
 	<!--	End Navbar-->
 
 
-	<section id="featured" class="my-5 pt-5">
-		<div class="container-register mt-5 py-5" ng-controller="healthInsuranceFormController">
-			<div class="textIntro">
-				<h1 class="text-center">Health Insurance Form</h1>
-				<p ng-show="msg">{{msg}}</p>
-				<div class="alert alert-warning" role="alert" th:if="${showHealthAlert}">The person with this health information already has health insurance! </div>
-			</div>
-
-			<form th:action="@{/healthInfoRegister}" th:object="${health}" method="post" name="myForm"
-				ng-submit="register()">
-				<input type="hidden" name="customerId" th:value="${customerId}" />
-				<div style=" display: flex; flex-direction: row;">
-					<h4 class="mr-2">Customer Id : </h4>
-					<h4 th:text="${customerId}">idParam</h4>
-				</div>
-
-				<select name="period" id="period" ng-model="period" ng-required="true">
-					<option value="">Select Insurance Period (Day)*</option>
-					<option ng-repeat="option in periods" value="{{option}}">{{option}}</option>
-				</select>
-
-				<select name="job" id="job" ng-model="job">
-					<option value="">Select Your Job*</option>
-					<option ng-repeat="option in jobs" value="{{option}}">{{option}}</option>
-				</select>
-
-				<select name="forWho" id="forWho" ng-model="forWho">
-					<option value="">Select For Who*</option>
-					<option ng-repeat="option in forWhose" value="{{option}}">{{option}}</option>
-				</select>
-
-				<input type="text" id="height" name="height" placeholder="Height (cm)*" ng-model="height"
-					ng-required="true" ng-pattern="/^\d{2,3}$/" ng-pattern-add="/^\d+$/">
-				<p class="error" ng-show="myForm.height.$invalid && myForm.height.$touched">Fill out
-					your height correctly.</p>
-
-				<input type="text" id="weight" name="weight" placeholder="Weight (m)*" ng-model="weight"
-					ng-required="true" ng-pattern="/^\d{2,3}$/" ng-pattern-add="/^\d+$/">
-				<p class="error" ng-show="myForm.weight.$invalid && myForm.weight.$touched">Fill out your
-					weight correctly.</p>
-
-				<div class="health-details">
-					<div class="details-questions">
-						<label>Do you have habits such as alcohol or smoking?</label>
-					</div>
-					<div class="radio-buttons">
-						<label>
-							<input type="radio" name="smokingOrAlcohol" ng-model="smokingOrAlcohol" ng-required="true"
-								th:value=1> Yes
-						</label>
-						<label>
-							<input type="radio" name="smokingOrAlcohol" ng-model="smokingOrAlcohol" ng-required="true"
-								th:value=0> No
-						</label>
-					</div>
-				</div>
-
-				<div class="health-details">
-					<div class="details-questions">
-						<label>Do you have SGK?</label>
-					</div>
-					<div class="radio-buttons">
-						<label>
-							<input type="radio" name="sgk" ng-model="sgk" ng-required="true" th:value=1> Yes, I have SGK
-						</label>
-						<label>
-							<input type="radio" name="sgk" ng-model="sgk" ng-required="true" th:value=0> No, I don't
-							have SGK
-						</label>
-					</div>
-				</div>
-
-				<div class="health-details">
-					<div class="details-questions">
-						<label>Have you ever had a surgical operation?</label>
-					</div>
-					<div class="radio-buttons">
-						<label>
-							<input type="radio" name="pastOperation" ng-model="pastOperation" ng-required="true"
-								ng-value=1> Yes
-						</label>
-						<label>
-							<input type="radio" name="pastOperation" ng-model="pastOperation" ng-required="true"
-								ng-value=0> No
-						</label>
-					</div>
-				</div>
-
-
-				<button type="submit" class="btn" ng-disabled="myForm.$invalid">Prepare My Offer</button>
-			</form>
-		</div>
-	</section>
-	
-	<!-- Footer -->
-	<footer class="mt-4 py-4">
+    <div class="page-wrapper bg-gra-02">
+        <div class="wrapper">
+            <div class="card">
+                <div class="card-body">
+                    <h2 class="title">Health Insurance Form</h2>
+                    <span class="customer-id mb-3">Customer Id: <span th:text="${customerId}"></span></span>
+                    <form th:action="@{/healthInfoRegister}" th:object="${health}" method="post" name="myForm" ng-submit="register()">
+                        <input type="hidden" name="customerId" th:value="${customerId}" />
+						<!-- Period - Job -->
+                        <div class="row">
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">
+                                        <div class="txt">Select Insurance Period (Day)</div>
+                                            <div class="warning" ng-show="myForm.period.$error.required && myForm.period.$touched">
+                                                <i class='bx bxs-error-alt'></i>
+                                                <p>Required</p>
+                                            </div>
+                                    </label>
+                                    <select class="form-select" name="period" id="period" ng-model="period" ng-required="true">
+                                        <option selected value="">Period</option>
+										<option ng-repeat="option in periods" value="{{option}}">{{option}}</option>
+                                      </select>
+                                </div>
+                            </div>
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">
+                                        <div class="txt">Select Your Job</div>
+                                            <div class="warning" ng-show="myForm.job.$error.required && myForm.job.$touched">
+                                                <i class='bx bxs-error-alt'></i>
+                                                <p>Required</p>
+                                            </div>
+                                    </label>
+                                    <select class="form-select" name="job" id="job" ng-model="job">
+                                        <option selected value="">Job</option>
+										<option ng-repeat="option in jobs" value="{{option}}">{{option}}</option>
+                                      </select>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- For Who -->
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="input-group">
+                                    <label class="label">
+                                        <div class="txt">Select For Who</div>
+                                            <div class="warning" ng-show="myForm.forWho.$error.required && myForm.forWho.$touched">
+                                                <i class='bx bxs-error-alt'></i>
+                                                <p>Required</p>
+                                            </div>
+                                    </label>
+                                    <select class="form-select" name="forWho" id="forWho" ng-model="forWho">
+                                        <option selected value="">Who</option>
+										<option ng-repeat="option in forWhose" value="{{option}}">{{option}}</option>
+                                      </select>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Height - Weight -->
+                        <div class="row">
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">
+                                        <div class="txt">Height (cm)</div>
+                                        <div class="warning" ng-show="myForm.height.$invalid && myForm.height.$touched">
+                                            <i class='bx bxs-error-alt'></i>
+                                            <p>Fill out your height correctly.</p>
+                                        </div>
+                                    </label>
+                                    <input type="text" id="height" name="height" placeholder="Height (cm)*" ng-model="height"
+									ng-required="true" ng-pattern="/^\d{2,3}$/" ng-pattern-add="/^\d+$/" class="input-4">
+                                </div>
+                            </div>
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">
+                                        <div class="txt">Weight (m)</div>
+                                        <div class="warning" ng-show="myForm.weight.$invalid && myForm.weight.$touched">
+                                            <i class='bx bxs-error-alt'></i>
+                                            <p>Fill out your weight correctly.</p>
+                                        </div>
+                                    </label>
+                                    <input type="text" id="weight" name="weight" placeholder="Weight (m)*" ng-model="weight"
+									ng-required="true" ng-pattern="/^\d{2,3}$/" ng-pattern-add="/^\d+$/" class="input-4">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- smoking - SGK -->
+                        <div class="row">
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">
+                                        <div class="txt">Do you have habits such as alcohol or smoking?</div>
+                                            <div class="warning" ng-show="myForm.smokingOrAlcohol.$error.required && myForm.smokingOrAlcohol.$touched">
+                                                <i class='bx bxs-error-alt'></i>
+                                                <p>Required</p>
+                                            </div>
+                                    </label>
+                                    <div class="radio-buttons">
+                                        <label>
+                                            <input type="radio" name="smokingOrAlcohol" ng-model="smokingOrAlcohol" ng-required="true" value=1> Yes
+                                        </label>
+                                        <label>
+                                            <input type="radio" name="smokingOrAlcohol" ng-model="smokingOrAlcohol" ng-required="true" value=0> No
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">
+                                        <div class="txt">Do you have SGK?</div>
+                                            <div class="warning" ng-show="myForm.sgk.$error.required && myForm.sgk.$touched">
+                                                <i class='bx bxs-error-alt'></i>
+                                                <p>Required</p>
+                                            </div>
+                                    </label>
+                                    <div class="radio-buttons">
+                                        <label>
+                                            <input type="radio" name="sgk" ng-model="sgk" ng-required="true" value=1> Yes, I have SGK
+                                        </label>
+                                        <label>
+                                            <input type="radio" name="sgk" ng-model="sgk" ng-required="true" value=0> No, I don't have SGK
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- surgical -->
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="input-group">
+                                    <label class="label">
+                                        <div class="txt">Have you ever had a surgical operation?</div>
+                                            <div class="warning" ng-show="myForm.pastOperation.$error.required && myForm.pastOperation.$touched">
+                                                <i class='bx bxs-error-alt'></i>
+                                                <p>Required</p>
+                                            </div>
+                                    </label>
+                                    <div class="radio-buttons">
+                                        <label>
+                                            <input type="radio" name="pastOperation" ng-model="pastOperation" ng-required="true" value=1> Yes
+                                        </label>
+                                        <label>
+                                            <input type="radio" name="pastOperation" ng-model="pastOperation" ng-required="true" value=0> No
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Submit -->
+                        <div class="button" type="submit" ng-disabled="myForm.$invalid">
+                            <button class="btn btn-submit">Prepare My Offer</button>
+                        </div>
+                        <!-- alert -->
+                        <div class="alert alert-warning" role="alert" th:if="${showHealthAlert}">
+                            The person with this health information already has health insurance!
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <footer class="py-4">
 		<div class="row container mx-auto pt-4">
 			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
 				<img src="img/logo.png" alt="">
@@ -233,25 +270,13 @@
 			</div>
 			<div class="copyright mt-2">
 				<div class="row container mx-auto">
-					<div class="col-lg-4 col-md-6 col-12 text-nowrap mb-2">
+					<div class="col-lg-4 col-md-6 col-12 mb-2">
 						<p>Eda Nur Mutlu eInsurance © 2023. All Rights Reserved</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</footer>
-
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-		integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
-		integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
-		crossorigin="anonymous"></script>
-
-	<script src="/js/app.js"></script>
+    <script src="app.js"></script>
 </body>
-
 </html>
